@@ -172,10 +172,17 @@ void TrackerQuery::sendState() {
 }
 
 void TrackerQuery::escapeString(const std::string& src, std::ostream& stream) {
+  // TODO: Correct would be to save the state.
   stream << std::hex << std::uppercase;
 
   for (std::string::const_iterator itr = src.begin(); itr != src.end(); ++itr)
-    stream << '%' << ((unsigned char)*itr >> 4) << ((unsigned char)*itr & 0xf);
+    if ((*itr >= 'A' && *itr <= 'Z') ||
+	(*itr >= 'a' && *itr <= 'z') ||
+	(*itr >= '0' && *itr <= '9') ||
+	*itr == '-')
+      stream << *itr;
+    else
+      stream << '%' << ((unsigned char)*itr >> 4) << ((unsigned char)*itr & 0xf);
 
   stream << std::dec << std::nouppercase;
 }
